Fix editmode issue: footer content area is partly hidden behind the CMS menubar if content area is scrollable.
Fix #67

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2581,6 +2581,9 @@ html[lang=ru] .content-formatted h1, html[lang=ru] .tags-btn, html[lang=ru] .men
     padding-bottom: 29px;
   }
 }
+.editmode .container-long .footer {
+  padding-bottom: 61px;
+}
 .footer .footer-inner {
   max-width: 720px;
   margin: 0 auto;
